<resources>
    <string name="app_name">Jamr</string>

    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Non-Binary</item>
    </string-array>

    <string-array name="genres">
        <item>Rock</item>
        <item>Jazz</item>
        <item>Math Rock</item>
        <item>Bossa Nova</item>
        <item>Pop</item>
        <item>Mariachi</item>
        <item>Funk</item>
        <item>RnB</item>
        <item>Hip Hop</item>
        <item>Country</item>
        <item>Experimental</item>
        <item>Classical</item>
        <item>Metal</item>
        <item>Grunge</item>
        <item>Soul</item>
        <item>Punk</item>
        <item>Reggae</item>
        <item>Ska</item>
        <item>Electronic</item>
        <item>EDM</item>
        <item>Alternative</item>
        <item>Latin</item>
        <item>Gypsy Jazz</item>
        <item>Healing</item>
        <item>Meditation</item>
        <item>Techno</item>
        <item>Surf Rock</item>
        <item>Gregorian Chant</item>
        <item>Baroque</item>
        <item>Motown</item>
        <item>Neo-Soul</item>
        <item>Dance</item>
        <item>Ambient</item>
        <item>Gospel</item>
        <item>Industrial</item>
        <item>Disco</item>
        <item>Drum and Bass</item>
        <item>Orchestral</item>
        <item>Big Band</item>
        <item>Swing</item>
        <item>World Music</item>
        <item>Psychedelic</item>
        <item>Experimental</item>
        <item>Trance</item>
        <item>Tech</item>
        <item>Electro</item>
        <item>Hardcore</item>
        <item>Progressive</item>
        <item>Indie</item>
        <item>Dub</item>
        <item>Dubstep</item>
        <item>House</item>
        <item>Acoustic</item>
        <item>Folk</item>
        <item>Theater</item>
        <item>Opera</item>
        <item>Singer/Songwriter</item>
        <item>Smooth Jazz</item>
        <item>Contemporary Jazz</item>
        <item>Blues</item>
        <item>K-pop</item>
        <item>J-pop</item>
        <item>Lo-Fi</item>
        <item>Soundtrack</item>
        <item>Avante-Garde</item>
        <item>Metalcore</item>
        <item>Stoner Metal</item>
        <item>Thrash Metal</item>
        <item>Viking Metal</item>
        <item>Trap</item>
        <item>Rap</item>
    </string-array>

    <string-array name="identities">
        <item>Guitarist</item>
        <item>Bassist</item>
        <item>Vocalist</item>
        <item>Singer</item>
        <item>Songwriter</item>
        <item>Student</item>
        <item>Producer</item>
        <item>Drummer</item>
        <item>Percussion</item>
        <item>Keyboardist</item>
        <item>Rapper</item>
        <item>Session Player</item>
        <item>Engineer</item>
        <item>DJ</item>
        <item>Mixer</item>
        <item>Performer</item>
        <item>Music Lover</item>
        <item>Manager</item>
        <item>Composer</item>
        <item>Teacher</item>
        <item>Therapist</item>
        <item>Organist</item>
        <item>Acoustic Guitar</item>
        <item>Ukulele</item>
        <item>Dancer</item>
        <item>Piano</item>
        <item>Electric Guitar</item>
        <item>Upright Bass</item>
        <item>Harpist</item>
        <item>Electric Upright Bass</item>
        <item>Cello</item>
        <item>Violin</item>
        <item>Flute</item>
        <item>Alto Saxophone</item>
        <item>Tenor Saxophone</item>
        <item>Trumpet</item>
        <item>Trombone</item>
        <item>Turn Table</item>
        <item>Club DJ</item>
    </string-array>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_me">Me</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_user_info">my_user_info</string>
    <string name="DisplayName">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="band">Band</string>
    <string name="artist">Artist</string>
    <string name="sign_up">sign up</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="reg_password_empty">You must enter your password to register</string>
    <string name="reg_email_empty">You must enter your email to register</string>
    <string name="reg_name_empty">You must enter a name to register</string>
    <string name="reg_email_invalid">Please enter a valid email</string>
    <string name="reg_create_account_title">Registering User</string>
    <string name="profile_setting_text">Setting</string>
    <string name="profile_collection_text">Edit Profile</string>
    <string name="title_feed">Feed</string>
    <string name="user_music_identity">User Music Identity</string>


</resources>
